# rtci2c

./: CMakeLists.txt  README.md  ds1307.c  ds1307.h  helpers.h  idf_component.yml  rtci2c.c  rtci2c_private.h
esp-idf/: CMakeLists.txt
esp-idf/main/: main.c
example/esp-idf/: CMakeLists.txt  Makefile
example/esp-idf/main/: Kconfig.projbuild  main.c
example/linux/: CMakeLists.txt  main.c
include/: rtci2c.h
include/rtci2c/: rtci2c.h  sys_esp.h
lib/: ds1307.c  ds1307.h  ds3231.c  ds3231.h  esp-idf.c  helpers.h  linux.c  rtci2c.c  rtci2c_private.h  sys.h
lowlevel/: esp-idf.c  linux.c
test/: CMakeLists.txt  main.c
